# wingman

./: README.md  config.py  main.py  pyproject.toml  requirements.txt  setup.py  wingman.kdev4
.github/: copilot-instructions.md
.kdev4/: wingman.kdev4
src/: main.py
src/core/: app_detector.py  doc_retriever.py
src/ui/: main_window.py  system_tray.py
src/wingman.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
